@@ -20,6 +20,12 @@
 
 2009-01-09  Sven Herzberg  <sven@imendio.com>
 
+	Added a main window to the RGBA demo
+
+	* demos/rgba-demo.c (main): added the main window
+
+2009-01-09  Sven Herzberg  <sven@imendio.com>
+
 	Started work on the RGBA demo
 
 	* demos/Makefile.am,
